# docmind

./: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/application/: answer_chunk_aggregator.py  conversations_app.py  documents_answer_app.py  documents_app.py  follow_up_detector.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: session.py  uow.py
backend/app/domains/conversations/: model.py  repo.py  router.py  schema.py
backend/app/domains/documents/: assets_repo.py  model.py  repo.py  router.py  schema.py  vector_repo.py
backend/app/infrastructure/document_processing/: docling_processor.py
backend/app/infrastructure/embeddings/: __init__.py  base.py  openai.py  sbert.py
backend/app/infrastructure/storage/: local_fs.py
backend/app/models/: __init__.py
backend/migrations/: 001_add_conversations_tables.sql
backend/tests/application/: test_documents_app.py
backend/tests/core/: test_logging.py
backend/tests/domains/documents/: __init__.py  test_vector_repo.py
backend/tests/infrastructure/embeddings/: __init__.py  test_embedding_providers.py
